fix: order of woodland columns on mobile

--- a/src/components/components/woodland/woodland.scss
+++ b/src/components/components/woodland/woodland.scss
@@ -7,4 +7,12 @@
     .gallery + .tab {
         @apply mt-6;
     }
+
+    .lede {
+        @apply text-center;
+
+        @screen md {
+            @apply text-left;
+        }
+    }
 }
